--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -67,6 +67,12 @@
   }
 }
 
+@media screen and (max-width: 800px) {
+  #page-foret .header {
+    font-size: 12px;
+  }
+}
+
 #page-foret .header > .container {
   display: flex;
   flex-direction: column;
@@ -76,6 +82,12 @@
 
 #page-foret .header > .container .signature {
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 800px) {
+  #page-foret .header > .container .intro {
+    display: none;
+  }
 }
 
 #page-foret .header .mouse-scroll {
@@ -295,6 +307,13 @@
   text-decoration: none;
 }
 
+@media screen and (max-width: 800px) {
+  #page-foret .content.form .foret-btn {
+    width: 100%;
+    height: auto;
+  }
+}
+
 #page-foret .content.form .foret-btn.btn-upload {
   width: 100%;
   background-color: #454545;
@@ -334,6 +353,12 @@
   font-size: 18px;
 }
 
+@media screen and (max-width: 800px) {
+  #page-foret .content .form-step[data-step="2"] {
+    padding: 30px 10px 100px;
+  }
+}
+
 #page-foret .content .form-step[data-step="2"] textarea {
   height: 200px;
   border-color: #454545;
@@ -368,8 +393,20 @@
   padding-right: 36px;
 }
 
+@media screen and (max-width: 800px) {
+  #page-foret .content .form-step[data-step="2"] .citation.-left {
+    padding-right: 0;
+  }
+}
+
 #page-foret .content .form-step[data-step="2"] .citation.-right {
   padding-left: 36px;
+}
+
+@media screen and (max-width: 800px) {
+  #page-foret .content .form-step[data-step="2"] .citation.-right {
+    padding-left: 0;
+  }
 }
 
 #page-foret .content .form-step[data-step="2"] .control-options {
