--- a/themes/cifq/partials/site/nav.htm
+++ b/themes/cifq/partials/site/nav.htm
@@ -20,6 +20,11 @@
                                     <span>{{ 'Le parcours de l’arbre'|_ }} <svg class="arrow-next-icon" viewBox="0 0 1 1"><use xlink:href="{{ 'assets/public/images/icons.svg#arrow-next'|theme }}" /></use></svg></span>
                                 </a>
                             </li>
+                            <li>
+                                <a href="{{ 'forest'|page }}">
+                                    <span>{{ 'Notre foret j’y crois'|_ }} <svg class="arrow-next-icon" viewBox="0 0 1 1"><use xlink:href="{{ 'assets/public/images/icons.svg#arrow-next'|theme }}" /></use></svg></span>
+                                </a>
+                            </li>
                         </ul>
                         {% if locale == 'fr' %}
                            <a class="btn partners-btn" target="_blank" href="http://partenaires.uneforetdepossibilites.com/fr">
