--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -19,6 +19,13 @@
   font-weight: 700;
 }
 
+@font-face {
+  font-family: "Plantin";
+  src: url("/themes/cifq/assets/public/fonts/PlantinStd-Italic.woff") format("woff");
+  font-style: normal;
+  font-weight: 700;
+}
+
 #page-nosforets {
   position: absolute;
   top: 0;
@@ -85,6 +92,14 @@
   text-align: center;
 }
 
+#page-nosforets .header > .container .intro {
+  width: 80%;
+  margin: auto;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 30px;
+  font-family: Plantin;
+}
+
 @media screen and (max-width: 800px) {
   #page-nosforets .header > .container .intro {
     display: none;
@@ -117,12 +132,15 @@
   padding-top: 60px;
   color: #6a6a6a;
   text-align: center;
-  font-size: 18px;
+  font-size: 28px;
+  font-family: Plantin;
 }
 
 #page-nosforets .content.intro h1 {
   font-weight: 700;
   font-size: 44px;
+  font-family: Brandon;
+  color: #84c425;
 }
 
 #page-nosforets .content.intro h2 {
@@ -131,6 +149,10 @@
   font-style: italic;
   font-size: 28px;
   font-family: 'Plantin Std', sans-serif;
+}
+
+#page-nosforets .content.intro .collectif-logo {
+  padding-bottom: 50px;
 }
 
 #page-nosforets .content.intro .list {
@@ -226,12 +248,14 @@
   color: black;
   font-size: 20px;
   text-align: left;
+  font-family: Brandon;
 }
 
 #page-nosforets .content.green-block .green-block-knowledge p {
   color: white;
   text-align: left;
   font-size: 14px;
+  font-family: Brandon;
 }
 
 #page-nosforets .content.green-block .green-block-quiz-wrapper {
@@ -268,6 +292,32 @@
 #page-nosforets .content.form .container {
   position: relative;
   height: 640px;
+}
+
+#page-nosforets .content.form .container .why-container {
+  padding-bottom: 30px;
+}
+
+#page-nosforets .content.form .container .why {
+  font-family: Brandon;
+  font-size: 30px;
+}
+
+#page-nosforets .content.form .container .know-that {
+  font-family: Plantin;
+  font-size: 30px;
+  float: right;
+}
+
+#page-nosforets .content.form .container .signature {
+  text-align: center;
+}
+
+#page-nosforets .content.form .container .intro {
+  font-family: Plantin;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 45px;
 }
 
 #page-nosforets .content.form h2 {
