--- a/themes/cifq/partials/site/nav.htm
+++ b/themes/cifq/partials/site/nav.htm
@@ -22,7 +22,7 @@
                             </li>
                             <li>
                                 <a href="{{ 'forest'|page }}">
-                                    <span>{{ 'Notre foret j’y crois'|_ }} <svg class="arrow-next-icon" viewBox="0 0 1 1"><use xlink:href="{{ 'assets/public/images/icons.svg#arrow-next'|theme }}" /></use></svg></span>
+                                    <span>{{ 'Notre forêt, j’y crois'|_ }} <svg class="arrow-next-icon" viewBox="0 0 1 1"><use xlink:href="{{ 'assets/public/images/icons.svg#arrow-next'|theme }}" /></use></svg></span>
                                 </a>
                             </li>
                         </ul>
